--- a/.env.development.template
+++ b/.env.development.template
@@ -3,11 +3,11 @@ GITHUB_CLIENT_SECRET=''
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 OPENAI_API_KEY=
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
+QAWS_ACCESS_KEY_ID=
+QAWS_SECRET_ACCESS_KEY=
+QAWS_REGION=us-east-1
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
 STRIPE_API_KEY=
-AWS_REGION=us-east-1
 NEXTAUTH_SECRET=evGx9VxXS6wsyCaBXNOMyDuAknXlNBcggA2h7O9zWgw=
 NEXTAUTH_URL=http://localhost:3000
 JWT_SECRET=Y2lBb3ZPU-f-dFVU_A9djnywMGoimi323WWTQANKfNPNcXmX3JZohwlSTLvi2y3Qx-Mgupyy88e1FoaU0b78QQ
