--- a/amplify.yml
+++ b/amplify.yml
@@ -7,7 +7,7 @@ frontend:
     build:
       commands: [npm run build]
   artifacts:
-    baseDirectory: .next
+    baseDirectory: studio_build
     files:
       - '**/*'
   cache:
