--- a/amplify.yml
+++ b/amplify.yml
@@ -28,6 +28,10 @@ frontend:
         - echo "NEXT_PUBLIC_IS_PROD=$NEXT_PUBLIC_IS_PROD" >> .env
         - echo "NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=$NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY" >> .env
         - npm run build
+        - npm install -g prisma --unsafe-perm
+        - npx prisma generate
+        - npm run db:dev:migrate:prod
+        
   artifacts:
     baseDirectory: studio_build
     files:
