--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
         "react-icons": "^4.8.0",
         "react-medium-image-zoom": "^5.1.3",
         "react-query": "^3.39.3",
+        "sharp": "^0.32.1",
         "stripe": "^12.0.0",
         "tailwindcss": "^3.3.1",
         "zod": "^3.21.4"
