--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
         "react-dom": "18.2.0",
         "react-icons": "^4.8.0",
         "react-medium-image-zoom": "^5.1.3",
+        "react-multi-select-component": "^4.3.4",
         "react-query": "^3.39.3",
         "sharp": "^0.32.1",
         "stripe": "^12.0.0",
