--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,12 @@ on:
       - '**/*.yml'
       - '**/.gitignore'
       - 'assets/*'
+  push:
+    paths-ignore:
+      - '**/*.md'
+      - '**/*.yml'
+      - '**/.gitignore'
+      - 'assets/'
   workflow_dispatch:
 
 jobs:
